--- a/WebPage/css/common.css
+++ b/WebPage/css/common.css
@@ -1,10 +1,19 @@
-table, th, td{
+/*table, th, td{
 	border: 1px solid #428bca;
 	padding: 5px;
 	border-collapse: collapse;
-}
+}*/
 th{
 	background-color: #428bca;
 	color: #fff;
 	border-bottom-color: #428bca;
+}
+
+input[type=range][orient=vertical]
+{
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* WebKit */
+    width: 8px;
+    height: 360px;
+    padding: 0 5px;
 }
